--- a/CSS/style.css
+++ b/CSS/style.css
@@ -314,10 +314,7 @@ a {
   line-height: 24px;
 }
 
-/* Тело страницы */
-/* .main-container {
-} */
-
+/* Спецпредложения */
 .special-offer {
   display: flex;
   flex-direction: column;
@@ -328,8 +325,6 @@ a {
   margin: 0;
   padding: 0;
   align-items: center;
-
-  background-color: chartreuse;
 }
 
 .special-offer .offer-text {
@@ -349,53 +344,69 @@ a {
   padding: 10px 40px;
 }
 
+/* Баннеры */
+.banners {
+  display: flex;
+  justify-content: space-between;
+  /* flex-wrap: wrap; */
+  padding-top: 12px;
+  padding-left: 27px;
+  padding-right: 27px;
+  align-items: center;
+}
+
 .banner {
-  /* display: flex;
-  flex-direction: column; */
-  width: 560px;
-  height: auto;
-  /* max-width: 100%;
-  height: auto; */
-  /* width: 100%;
-  height: auto; */
-  /* position: relative;
-  left: 27px; */
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 15px 20px 23px 19px;
+
   font-size: 18px;
   line-height: 22px;
   text-align: left;
-  background-size: cover;
+  border-radius: 18px;
 }
 
 .banner h3 {
-  /* position: relative;
-  top: 16px;
-  left: 22px; */
+  margin: 0;
+
+  font-size: 35px;
+  line-height: 41px;
 }
 
 .banner .banner-text {
-  /* position: relative;
-  top: 20px;
-  left: 22px; */
+  margin: 0;
+  padding-top: 16px;
+  /* padding-right: 30px; */
+  /* padding: 0; */
+  /* padding-top: 0; */
 }
 
 #first-banner {
   background: url(IMG/Raspberry_background.svg) no-repeat;
+  background-size: 100% 100%;
 }
 
 #second-banner {
   background: url(IMG/Chocolate_background.svg) no-repeat;
+  background-size: 100% 100%;
+}
+
+.banner__button {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+  padding-top: 45px;
 }
 
 .banner button {
-  /* position: relative;
-  top: 20px;
-  bottom: 23px; 
-  right: 21px; */
   margin: 0;
-  padding: 10px 40px;
+  padding: 10px 24px 12px 22px;
 
-  font-size: 32px;
-  line-height: 44px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  align-items: center;
   text-align: center;
   background: linear-gradient(0deg, #ca3824 -2.17%, #f26843 104.35%);
   mix-blend-mode: normal;
@@ -420,11 +431,7 @@ a {
   box-shadow: inset 0px 2px 2px #942718;
 }
 
-.banner h3 {
-  font-size: 35px;
-  line-height: 41px;
-}
-
+/* Хиты */
 .hits {
   text-align: center;
 }
