--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,8 @@
 }
 
 body {
-  width: 1200px;
+  /* min-width: 960px; */
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0;
 
@@ -23,9 +24,10 @@ body {
   font-weight: 700;
   font-style: normal;
   color: #ffffff;
+
   background-color: var(--color-background1);
   background-image: url(IMG/IceCreams_1.png);
-  background-position: top;
+  background-position: top center;
   background-repeat: no-repeat;
 }
 /* 
@@ -359,12 +361,12 @@ a {
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding: 15px 20px 23px 19px;
+  padding: 15px 32px 23px 19px;
 
   font-size: 18px;
   line-height: 22px;
   text-align: left;
-  border-radius: 18px;
+  border-radius: 16px;
 }
 
 .banner h3 {
@@ -392,15 +394,19 @@ a {
   background-size: 100% 100%;
 }
 
+/* задать собственный отступ справа */
 .banner__button {
   display: flex;
   justify-content: flex-end;
+  padding: 0;
   margin: 0;
-  padding-top: 45px;
+  /* padding-top: 45px; */
 }
 
+/*  */
 .banner button {
-  margin: 0;
+  /* margin: 0; */
+  margin-bottom: 23px;
   padding: 10px 24px 12px 22px;
 
   font-weight: 700;
@@ -408,6 +414,7 @@ a {
   line-height: 24px;
   align-items: center;
   text-align: center;
+  
   background: linear-gradient(0deg, #ca3824 -2.17%, #f26843 104.35%);
   mix-blend-mode: normal;
   opacity: 0.99;
