--- a/CSS/style.css
+++ b/CSS/style.css
@@ -414,7 +414,7 @@ a {
   line-height: 24px;
   align-items: center;
   text-align: center;
-  
+
   background: linear-gradient(0deg, #ca3824 -2.17%, #f26843 104.35%);
   mix-blend-mode: normal;
   opacity: 0.99;
@@ -591,7 +591,15 @@ a {
 }
 
 .modal {
-  visibility: hidden;
+  /* visibility: hidden; */
+  position: fixed;
+  background-color: #9d8b84;
+  /* background-color: url(); */
+  background-position: 0 0;
+  /* background-repeat: repeat; */
+}
+
+.modal-login {
 }
 
 .modal-login a {
