--- a/CSS/style.css
+++ b/CSS/style.css
@@ -593,13 +593,11 @@ a {
 /* Всплывающее окно входа */
 .modal {
   color: #000000;
-  /* visibility: hidden; */
   position: fixed;
 
-  background-color: #9d8b84;
-  /* background-color: url(); */
+  background: #f8f7f4;
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
   background-position: 0 0;
-  /* background-repeat: repeat; */
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
 }
 
