--- a/CSS/style.css
+++ b/CSS/style.css
@@ -320,6 +320,7 @@ a {
 .special-offer {
   display: flex;
   flex-direction: column;
+  /* justify-items: space-between; */
 
   font-size: 60px;
   line-height: 60px;
@@ -330,38 +331,55 @@ a {
 }
 
 .special-offer .offer-text {
+  padding: 0;
+  margin-top: 60px;
+
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 60px;
+  display: flex;
   align-items: center;
+  text-align: center;
+  color: #ffffff;
+}
+
+.offer-text p {
+  margin: 0;
+  padding: 0;
 }
 
 .special-offer button {
-  position: relative;
-  bottom: 30px;
+  margin: 0;
+  margin-top: 31px;
+  padding: 10px 40px;
+  /* position: relative; */
+  /* bottom: 30px; */
 
   font-size: 32px;
   line-height: 44px;
   align-items: center;
   text-align: center;
   color: #ffffff;
-  margin: 0;
-  padding: 10px 40px;
 }
 
 /* Баннеры */
 .banners {
+  padding: 0;
+  margin: 0 27px;
+
   display: flex;
   justify-content: space-between;
   /* flex-wrap: wrap; */
-  padding-top: 12px;
-  padding-left: 27px;
-  padding-right: 27px;
   align-items: center;
 }
 
 .banner {
+  width: 560px;
+  margin-top: 41px;
+  padding: 16px 34px 23px 18px;
+
   display: flex;
   flex-direction: column;
-  margin: 0;
-  padding: 15px 32px 23px 19px;
 
   font-size: 18px;
   line-height: 22px;
@@ -370,18 +388,27 @@ a {
 }
 
 .banner h3 {
-  margin: 0;
+  margin: 0 0 15px 0;
+  padding: 0;
 
+  font-style: normal;
+  font-weight: 700;
   font-size: 35px;
   line-height: 41px;
+  align-items: center;
+  color: #ffffff;
 }
 
 .banner .banner-text {
   margin: 0;
-  padding-top: 16px;
-  /* padding-right: 30px; */
-  /* padding: 0; */
-  /* padding-top: 0; */
+  padding: 0 0 0 1px;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  align-items: center;
+  color: #ffffff;
 }
 
 #first-banner {
@@ -399,14 +426,13 @@ a {
   display: flex;
   justify-content: flex-end;
   padding: 0;
-  margin: 0;
-  /* padding-top: 45px; */
+  margin: 45px 0 0 0;
 }
 
 /*  */
 .banner button {
-  /* margin: 0; */
-  margin-bottom: 23px;
+  /* margin: 0 0 23px 0; */
+  margin: 0;
   padding: 10px 24px 12px 22px;
 
   font-weight: 700;
@@ -439,13 +465,32 @@ a {
 }
 
 /* Хиты */
-.hits {
-  display: flex;
-  text-align: center;
+.hits-container {
   margin: 0;
+  padding: 0;
+  /* display: flex; */
+  /* justify-content: space-between;  */
+}
+
+.hits-list {
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  text-align: center;
+  /* justify-content: space-between; */
+  margin: 0;
+  padding: 0;
+}
+
+.hits-list li {
+  margin: 0;
+  padding: 0;
 }
 
 .hits a {
+  /* margin: 0;
+  padding: 0; */
+
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
@@ -454,10 +499,13 @@ a {
 
 .hits li {
   margin: 0;
-  padding-bottom: 24px;
+  padding: 0;
+  /* padding-bottom: 24px; */
 }
 
 .hit-icon {
+  margin: 0;
+  padding: 0;
   position: absolute;
 }
 
@@ -467,16 +515,16 @@ a {
 }
 
 .hit-item {
-  text-align: left;
+  padding: 0;
+  margin: 0;
+  /* text-align: center; */
 }
 
+/* ломается положение цены при раздвигании экрана!!! */
 .price {
   margin: 0;
-  /* padding: 0; */
+  padding: 0;
   text-align: left;
-  position: relative;
-  bottom: 46px;
-  right: 1px;
 
   font-style: normal;
   font-weight: 700;
@@ -489,8 +537,6 @@ a {
 .rub {
   margin: 0;
   padding: 0;
-  position: relative;
-  right: 6px;
 
   font-style: normal;
   font-weight: 700;
@@ -503,8 +549,6 @@ a {
 .unit-monetary {
   margin: 0;
   padding: 0;
-  position: relative;
-  right: 17px;
 
   font-style: normal;
   font-weight: 700;
@@ -515,6 +559,9 @@ a {
 }
 
 .ice-cream-name {
+  margin: 0;
+  padding: 0;
+
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
