--- a/CSS/style.css
+++ b/CSS/style.css
@@ -600,7 +600,6 @@ a {
 .SEO-list li {
   display: flex;
 
-  /* margin-bottom: 23px; */
   margin: 0;
   padding: 0;
 }
@@ -631,26 +630,57 @@ a {
   color: #323232;
 }
 
-/* Новости */
-.news {
-  text-align: left;
+
+/* Контейнер новости+рассылка */
+.news-mailing-container{
+margin: 40px 27px;
+padding: 0;
+
+display: flex;
+flex-direction: row;
 }
 
-.news a {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 30px;
-  text-decoration: underline;
-  color: #000000;
+/* Новости */
+.news {
+  margin: 0;
+  padding: 23px 254px 81px 19px;
+
+  text-align: left;
+
+  background-color: var(--color-backround-default);
+  background: url(IMG/Strawberry_background.png) no-repeat;
+  background-size: 100% 100%;
 }
 
 .news h4 {
+  margin: 0 0 4px;
+  padding: 0;
+
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
-  color: #000000;
+  align-items: center;
+  color: #323232;
 }
 
+.news a {
+  margin-right: 50px;
+  padding: 0;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  align-items: center;
+  color: #323232;
+
+  text-decoration: underline 2px solid;
+  text-decoration-skip-ink: none;
+  text-underline-offset: 3px;
+}
+
+/* Рассылка */
 .mailing {
   text-align: center;
   font-weight: 400;
