--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,8 +82,10 @@ button:active {
   box-shadow: inset 0px 2px 2px #942718;
 }
 
-li {
+ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .visually-hidden {
@@ -219,7 +221,6 @@ a {
   align-items: center;
   box-shadow: none;
   background: #ffffff;
-  mix-blend-mode: normal;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
@@ -234,7 +235,6 @@ a {
   align-items: center;
   box-shadow: none;
   background: #ffffff;
-  mix-blend-mode: normal;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
@@ -256,7 +256,6 @@ a {
   align-items: center;
   box-shadow: none;
   background: #ffffff;
-  mix-blend-mode: normal;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
@@ -427,7 +426,6 @@ a {
   text-align: center;
 
   background: linear-gradient(0deg, #ca3824 -2.17%, #f26843 104.35%);
-  mix-blend-mode: normal;
   opacity: 0.99;
   box-shadow: 0px 2px 2px rgba(85, 8, 0, 0.54);
 }
@@ -728,7 +726,7 @@ a {
 }
 
 .mailing button {
-  margin:  0 0 1px;
+  margin: 0 0 1px;
   padding: 1px 17px;
 
   font-size: 18px;
@@ -743,7 +741,7 @@ a {
   margin: 0;
   padding: 0;
 
-  background-color: #be187c;
+  background-color: var(--color-backround-default);
 }
 
 .map {
@@ -752,6 +750,10 @@ a {
 
   margin: 0;
   padding: 0;
+}
+
+.yandex-map {
+  display: flex;
 }
 
 .address {
@@ -778,7 +780,7 @@ a {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  align-items: center; 
+  align-items: center;
 }
 
 .address .contacts-container {
@@ -837,44 +839,72 @@ a {
 
 /* Подвал */
 .main-footer {
-  margin: 0;
+  margin: 18px 27px 25px 26px;
   padding: 0;
 
-  text-align: left;
-}
-
-.social-media {
   display: inline-flex;
+}
+
+/* Соцсети */
+.social-media {
+  display: flex;
   margin: 0;
   padding: 0;
-
 }
 
-.menu-footer-first-column {
+.social-media button {
+  all: unset;
+  /* background: rgba(255, 255, 255, 0.5); */
+  border-radius: 50%;
+  /* border: 1px solid #ffffff; */
 }
 
-.menu-footer-second-column {
-}
+.footer-menu-list {
+  /* padding: 0; */
+  margin: 0 323px 0 236px;
 
-.menu-footer-first-column,
-.menu-footer-second-column {
+  text-decoration: underline solid 1px;
+  text-decoration-color: rgba(255, 255, 255, 0.2);
+
+  display: grid;
+  align-items: baseline;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 32px;
+  /* grid-row-gap: 3px; */
+
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
-  align-items: center;
-  text-decoration: underline;
-  text-decoration-color: rgba(255, 255, 255, 0.2);
+  align-items: start;
+  color: #ffffff;
 }
 
-.menu-footer-first-column li:nth-child(1) {
+.footer-menu-list .heart-icon {
+  padding: 0;
+  margin-right: 7px;
+}
+
+.footer-menu-list li:nth-child(1) {
+  list-style-image: url(IMG/heart.svg);
   font-weight: 700;
 }
 
+.footer-menu-list li:nth-child(2) {
+  /* padding-left: 22px; */
+}
+
 .created-by {
+  margin: 0;
+  padding: 0;
+
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
   color: #fefefe;
+}
+
+.created-by p{
+  margin: 0;
 }
 
 /* Всплывающее окно входа */
