--- a/CSS/style.css
+++ b/CSS/style.css
@@ -842,35 +842,39 @@ a {
   margin: 18px 27px 25px 26px;
   padding: 0;
 
-  display: inline-flex;
+  display: flex;
 }
 
 /* Соцсети */
 .social-media {
-  display: flex;
-  margin: 0;
-  padding: 0;
 }
 
-.social-media button {
-  all: unset;
-  /* background: rgba(255, 255, 255, 0.5); */
-  border-radius: 50%;
-  /* border: 1px solid #ffffff; */
+.social-media li {
+  display: inline-flex;
+  gap: 30px;
 }
+
+.social-media-link {
+}
+/* .social-media button { */
+/* all: unset; */
+/* background: rgba(255, 255, 255, 0.5); */
+/* border-radius: 50%; */
+/* border: 1px solid #ffffff; 
+}*/
 
 .footer-menu-list {
-  /* padding: 0; */
-  margin: 0 323px 0 236px;
+  padding: 0;
+  margin: 0 323px 0 100px;
 
   text-decoration: underline solid 1px;
   text-decoration-color: rgba(255, 255, 255, 0.2);
 
   display: grid;
-  align-items: baseline;
+  /* align-items: baseline; */
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 32px;
-  /* grid-row-gap: 3px; */
+  grid-row-gap: 8px;
 
   font-weight: 400;
   font-size: 13px;
@@ -903,7 +907,7 @@ a {
   color: #fefefe;
 }
 
-.created-by p{
+.created-by p {
   margin: 0;
 }
 
